--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
     }
+
+
 }
 
 
@@ -25,4 +27,15 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 }
+
+bootRun.environment([
+        "WELCOME_MESSAGE": "hello Mohan",
+])
+
+test.environment([
+        "WELCOME_MESSAGE": "Hello from test",
+])
+
+
